# PopGenFlux

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
popgenflux/: blast_hgt_analysis.py
tests/: test_blast_hgt_analysis.py
