[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PopGenFlux"
version = "0.0.1"
description = "Population genetics utilities and tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Siddhartha Uppal", email = "sidd.uppal96@gmail.com"},
    {name = "Andrew Moeller", email = "andrew.moeller@princeton.edu"}
]

[project.urls]
"Homepage" = "https://github.com/MoellerLabPU/PopGenFlux"
"Bug Tracker" = "https://github.com/MoellerLabPU/PopGenFlux/issues"

[project.scripts]
popgenflux-hgt = "popgenflux.blast_hgt_analysis:main"



